# mate-user-share

./: .build.yml  .travis.yml  CNAME  ChangeLog  ChangeLog.pre-git  MAINTAINERS  Makefile.am  NEWS  NEWS.GNOME  README  README.md  autogen.sh  configure.ac  configure.in  gnome-user-share.doap  index.html  makepot  mate-user-share.pot
.github/workflows/: archlinux.sh  debian.sh  fedora.sh  release.yml  ubuntu.sh
.tx/: config  config_20221029001124.bak
2020-04-06-121655-6524-cppcheck@44e9e2eccd98_master/: 5.html
2020-04-11-130325-5591-cppcheck@e38fccc12f23_warn_cflags/: 1.html  index.html
2020-06-12-004111-9546-cppcheck@0ac8ecb990d2_master/: 3.html
2020-06-28-102155-0593-cppcheck@ceeb6e4bfa08_master/: 0.html  2.html  4.html  stats.html
2020-07-31-224753-9107-cppcheck@3fd04c35acf7_master/: 0.html  1.html  2.html  3.html  4.html  index.html  stats.html
2020-12-09-195411-4024-cppcheck@258a71f02483_master/: 0.html  1.html  2.html  3.html  4.html  index.html  stats.html
2021-03-09-235935-8562-cppcheck@52bc759bdcfd_master/: 2.html
2021-03-27-160708-9454-cppcheck@bc0bdef34681_master/: 3.html  index.html
2021-04-25-143339-9886-cppcheck@cf2a18e177f2_master/: 0.html  1.html  4.html  stats.html
2021-05-30-164325-0736-cppcheck@58f05a4efe60_master/: 0.html  1.html  2.html  3.html  4.html
2021-06-25-153248-0614-cppcheck@198f334ccf4c_master/: 0.html  1.html  2.html  3.html  4.html  index.html
2021-08-05-192303-3702-cppcheck@c6718ce23130_master/: 0.html  1.html  2.html  3.html  4.html  index.html  stats.html
2022-02-13-194124-4467-cppcheck@b215c4400bb6_master/: 0.html  1.html  2.html  3.html  4.html  index.html  stats.html
2022-10-29-134846-0734-cppcheck@fcf648868871_master/: index.html
2022-11-11-200849-3937-cppcheck@c9d02a6bbcbb_master/: 0.html
2022-11-11-201040-0718-cppcheck@c9d02a6bbcbb_v1.27.0/: 1.html  2.html  3.html  stats.html
2023-09-10-082921-9712-cppcheck@2d4aba56e7bf_master/: 1.html  4.html  index.html
2023-09-19-100425-2309-cppcheck@72f91230a146_master/: 0.html  2.html  3.html  5.html  stats.html
2024-02-22-185755-8058-cppcheck@00d9a360c0cc_v1.28.0/: 0.html  1.html  10.html  11.html  12.html  13.html  14.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  index.html  stats.html
data/: Makefile.am  dav_user_2.4.conf  desktop_mate_file_sharing.schemas.in  file-share-properties.ui  libcaja-user-share.caja-extension.in.in  libcaja-user-share.desktop.in.in  mate-user-share-obexftp.desktop.in.in  mate-user-share-obexpush.desktop.in.in  mate-user-share-properties.desktop.in  mate-user-share-webdav.desktop.in.in  mate-user-share.convert  mate-user-share.desktop.in.in  org.mate.FileSharing.gschema.xml
data/icons/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
help/: Makefile.am  gnome-user-share.omf.in  mate-user-share.omf.in  mate-user-share.pot
help/C/: gnome-user-share.xml  index.docbook  legal.xml  mate-user-share.xml
help/af/: af.po
help/am/: am.po
help/ar/: ar.po
help/as/: as.po
help/ast/: ast.po
help/az/: az.po
help/be/: be.po
help/bg/: bg.po
help/bn/: bn.po
help/bn_IN/: bn_IN.po
help/br/: br.po
help/bs/: bs.po
help/ca/: ca.po
help/ca@valencia/: ca@valencia.po
help/cmn/: cmn.po
help/crh/: crh.po
help/cs/: cs.po
help/cy/: cy.po
help/da/: da.po
help/de/: de.po  legal.xml
help/dz/: dz.po
help/el/: el.po
help/en_AU/: en_AU.po
help/en_CA/: en_CA.po
help/en_GB/: en_GB.po
help/eo/: eo.po
help/es/: es.po  legal.xml
help/es_CO/: es_CO.po
help/et/: et.po
help/eu/: eu.po
help/fa/: fa.po
help/fi/: fi.po
help/fr/: fr.po
help/fur/: fur.po
help/fy/: fy.po
help/ga/: ga.po
help/gl/: gl.po
help/gu/: gu.po
help/ha/: ha.po
help/he/: he.po
help/hi/: hi.po
help/hr/: hr.po
help/hu/: hu.po
help/hy/: hy.po
help/ia/: ia.po
help/id/: id.po
help/ie/: ie.po
help/ig/: ig.po
help/is/: is.po
help/it/: it.po
help/ja/: ja.po
help/ka/: ka.po
help/kab/: kab.po
help/kk/: kk.po
help/kn/: kn.po
help/ko/: ko.po
help/ku/: ku.po
help/ky/: ky.po
help/lt/: lt.po
help/lv/: lv.po
help/mai/: mai.po
help/mg/: mg.po
help/mk/: mk.po
help/ml/: ml.po
help/mn/: mn.po
help/mr/: mr.po
help/ms/: ms.po
help/nb/: nb.po
help/nds/: nds.po
help/ne/: ne.po
help/nl/: nl.po
help/nn/: nn.po
help/nso/: nso.po
help/oc/: oc.po
help/or/: or.po
help/pa/: pa.po
help/pl/: pl.po
help/po/: sl.po
help/ps/: ps.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ro/: legal.xml  ro.po
help/ru/: ru.po
help/si/: si.po
help/sk/: sk.po
help/sl/: sl.po
help/sq/: sq.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: legal.xml  sv.po
help/ta/: ta.po
help/te/: te.po
help/th/: th.po
help/tr/: tr.po
help/ug/: ug.po
help/uk/: uk.po
help/ur/: ur.po
help/uz/: uz.po
help/vi/: vi.po
help/wa/: wa.po
help/xh/: xh.po
help/yo/: yo.po
help/zh_CN/: zh_CN.po
help/zh_HK/: zh_HK.po
help/zh_TW/: zh_TW.po
help/zu/: zu.po
man/: Makefile.am  mate-file-share-properties.1
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  de_CH.po  dz.po  el.po  en@shaw.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_419.po  es_AR.po  es_CL.po  (+124 more)
src/: Makefile.am  caja-share-bar.c  caja-share-bar.h  file-share-properties.c  http.c  http.h  marshal.list  obexftp.c  obexftp.h  obexpush.c  obexpush.h  share-extension.c  user_share-common.c  user_share-common.h  user_share-private.c  user_share-private.h  user_share.c  user_share.h
